added 1 missing translation + some updates

--- a/gbsplay/po/de.po
+++ b/gbsplay/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2003-12-28 20:25+0100\n"
-"PO-Revision-Date: 2003-12-12 21:16+0100\n"
+"PO-Revision-Date: 2003-12-28 22:48+0100\n"
 "Last-Translator: Tobias Diedrich <ranma@gmx.at>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -36,9 +36,7 @@ msgstr ""
 msgid ""
 "\"%s\" is not a valid endian.\n"
 "\n"
-msgstr ""
-"\"%s\" is not a valid endian.\n"
-"\n"
+msgstr "\"%s\" ist keine gültige Byte-Order.\n\n"
 
 #, c-format
 msgid "'%s' expected at %s line %d char %d.\n"
@@ -49,7 +47,7 @@ msgid "(%d seconds)\n"
 msgstr "(%d Sekunden)\n"
 
 msgid "Artist:"
-msgstr "Komponist:"
+msgstr "Künstler:"
 
 #, c-format
 msgid "CRC32:\t\t0x%08x/0x%08x (%s)\n"
@@ -115,7 +113,7 @@ msgstr ""
 "Ladeadresse:    0x%04x\n"
 "Initadresse:    0x%04x\n"
 "Abspieladresse: 0x%04x\n"
-"Stack pointer:  0x%04x\n"
+"Stack-Zeiger:   0x%04x\n"
 "Dateigrösse:    0x%08x\n"
 "ROM-Grösse:     0x%08x (%d Bänke)\n"
 "Subsongs:       %d\n"
@@ -133,8 +131,8 @@ msgid ""
 "No sound support on this platform.\n"
 "Use 'gbsplay -s' for stdout output."
 msgstr ""
-"Tonausgabe wird auf dieser Platform nicht unterstützt.\n"
-"Benutze 'gbsplay -s' um die Daten auf die Standardausgabe zu lenken."
+"Tonausgabe wird auf dieser Plattform nicht unterstützt.\n"
+"Benutze 'gbsplay -s', um die Daten auf die Standardausgabe zu lenken."
 
 #, c-format
 msgid "Not a GBS-File: %s\n"
@@ -162,7 +160,7 @@ msgstr "Subsong %03d:\t"
 
 #, c-format
 msgid "Subsong number out of range (min=0, max=%d).\n"
-msgstr "Subsong-Nummer ausserhalb des Wertebereichs (min=0, max=%d).\n"
+msgstr "Subsong-Nummer außerhalb des Wertebereichs (min=0, max=%d).\n"
 
 msgid "Title"
 msgstr "Titel"
@@ -203,7 +201,7 @@ msgstr ""
 "  -f  Ausblendzeit (%d Sekunden)\n"
 "  -g  Lücke (%d Sekunden)\n"
 "  -h  Diese Hilfe anzeigen und Programm beenden\n"
-"  -q  Leise\n"
+"  -q  Ruhig\n"
 "  -r  Abspielrate (%dHz)\n"
 "  -s  Auf die Standardausgabe schreiben\n"
 "  -t  Zeitlimit (%d Sekunden)\n"
@@ -214,7 +212,7 @@ msgstr ""
 
 #, c-format
 msgid "Warning: Extended header found, but CRC does not match (0x%08x != 0x%08x).\n"
-msgstr "Warnung: Extended header gefunden, aber die Prüfsumme stimmt nicht (0x%08x != 0x%08x).\n"
+msgstr "Warnung: Erweiterten Kopfbereich gefunden, aber die Prüfsumme stimmt nicht (0x%08x != 0x%08x).\n"
 
 #, c-format
 msgid "Warning: File CRC does not match (0x%08x != 0x%08x).\n"
