--- a/gbsplay/po/de.po
+++ b/gbsplay/po/de.po
@@ -1,14 +1,15 @@
 # German translations for gbsplay.
 # Copyright (C) 2003 Tobias Diedrich <ranma@gmx.at>
+#                    Christian Garbs <mitch@cgarbs.de>
 # This file is distributed under GNU GPL.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: 0.0.4\n"
+"Report-Msgid-Bugs-To: Tobias Diedrich <ranma@gmx.at>\n"
 "POT-Creation-Date: 2003-12-28 20:25+0100\n"
-"PO-Revision-Date: 2003-12-28 22:48+0100\n"
-"Last-Translator: Tobias Diedrich <ranma@gmx.at>\n"
+"PO-Revision-Date: 2003-12-28 23:36+0100\n"
+"Last-Translator: Christian Garbs <mitch@cgarbs.de>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
@@ -212,7 +213,7 @@ msgstr ""
 
 #, c-format
 msgid "Warning: Extended header found, but CRC does not match (0x%08x != 0x%08x).\n"
-msgstr "Warnung: Erweiterten Kopfbereich gefunden, aber die Prüfsumme stimmt nicht (0x%08x != 0x%08x).\n"
+msgstr "Warnung: Erweiterter Kopfbereich gefunden, aber die Prüfsumme stimmt nicht (0x%08x != 0x%08x).\n"
 
 #, c-format
 msgid "Warning: File CRC does not match (0x%08x != 0x%08x).\n"
