--- a/gbsplay/po/de.po
+++ b/gbsplay/po/de.po
@@ -1,3 +1,4 @@
+# $Id: de.po,v 1.9 2003/12/28 22:43:08 mitch Exp $
 # German translations for gbsplay.
 # Copyright (C) 2003 Tobias Diedrich <ranma@gmx.at>
 #                    Christian Garbs <mitch@cgarbs.de>
@@ -8,7 +9,7 @@ msgstr ""
 "Project-Id-Version: 0.0.4\n"
 "Report-Msgid-Bugs-To: Tobias Diedrich <ranma@gmx.at>\n"
 "POT-Creation-Date: 2003-12-28 20:25+0100\n"
-"PO-Revision-Date: 2003-12-28 23:36+0100\n"
+"PO-Revision-Date: 2003-12-28 23:41+0100\n"
 "Last-Translator: Christian Garbs <mitch@cgarbs.de>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
