--- a/gbsplay/po/en.po
+++ b/gbsplay/po/en.po
@@ -1,13 +1,14 @@
+# $Id: en.po,v 1.6 2003/12/28 22:43:08 mitch Exp $
 # English translations for gbsplay.
 # Copyright (C) 2003 Tobias Diedrich <ranma@gmx.at>
 # This file is distributed under GNU GPL.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: 0.0.4\n"
+"Report-Msgid-Bugs-To: Tobias Diedrich <ranma@gmx.at>\n"
 "POT-Creation-Date: 2003-12-28 20:25+0100\n"
-"PO-Revision-Date: 2003-12-12 21:16+0100\n"
+"PO-Revision-Date: 2003-12-28 23:42+0100\n"
 "Last-Translator: Tobias Diedrich <ranma@gmx.at>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
