--- a/gbsplay/INSTALL
+++ b/gbsplay/INSTALL
@@ -1,4 +1,4 @@
-<<$Id: INSTALL,v 1.2 2003/12/25 10:17:45 mitch Exp $>>
+<<$Id: INSTALL,v 1.3 2004/01/11 20:27:05 mitch Exp $>>
 
 
 gbsplay INSTALL instructions
@@ -20,9 +20,12 @@ So on FreeBSD, you need to run "gmake" instead of "make".
 
 ### CUSTOMIZING THE INSTALLATION TARGET
 
-To change the installation target, set a prefix:
+To change the installation target, run the configure script manually
+and pass some parameters (see "./configure --help" for a list):
 
-$ make install prefix=/tmp/GBSPLAY
+$ ./configure --prefix=/tmp/GBSPLAY
+$ make
+$ make install
 
 Remember to use the same prefix on uninstall!
 
@@ -37,7 +40,9 @@ But you can prepend it with another path.  Use DESTDIR= for this.
 
 Example:
 
-$ make install prefix=/tmp/GBSPLAY/usr DESTDIR=/tmp/GBSPLAY
+$ ./configure --prefix=/tmp/GBSPLAY/usr
+$ make
+$ make install DESTDIR=/tmp/GBSPLAY
 
 This will install to /tmp/GBSPLAY/usr/(bin|man|share/doc) and put the
 XMMS plugin to /tmp/GBSPLAY/$(xmms-config --input-plugin-dir).
