--- a/gbsplay/TODO
+++ b/gbsplay/TODO
@@ -1,4 +1,4 @@
-<<$Id: TODO,v 1.54 2004/01/17 19:13:45 mitch Exp $>>
+<<$Id: TODO,v 1.55 2004/01/19 20:20:20 mitch Exp $>>
 
 
 TODO list for gbsplay.
@@ -12,9 +12,6 @@ TODO list for gbsplay.
 ( )  configure script does not print "shared lib enabled"
 
 ( )  make install/uninstall miss shared library
-
-( )  make uninstall does not work on Cygwin because all executables get
-     a ".exe" prefix and rm does not find them.
 
 ### unspecified: (bits'n'ideas)
 
@@ -41,3 +38,6 @@ TODO list for gbsplay.
      (configure --enable-sharedlibgbs)
      (at least install/uninstall buggy and thus this feature has not
       been announced in the 0.0.5 release!)
+
+(X)  Fix make install, uninstall and clean on Cygwin:
+     All executables have .exe suffix.
