--- a/gbsplay/gbsinfo.in.1
+++ b/gbsplay/gbsinfo.in.1
@@ -1,4 +1,4 @@
-.\" $Id: gbsinfo.in.1,v 1.1 2003/09/22 18:22:09 mitch Exp $
+.\" $Id: gbsinfo.in.1,v 1.2 2004/02/16 20:50:04 mitch Exp $
 .\" This manpage 2003 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsinfo" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
@@ -16,7 +16,7 @@ The sound file to read.  Must be in uncompressed .GBS format.
 .SH "SEE ALSO"
 \fIgbsplay\fR(1)
 .SH "BUG REPORTS"
-If you encounter bugs, please report them to <\fIranma@gmx.at\fR>.
+If you encounter bugs, please report them via \fIhttp://developer.berlios.de/projects/gbsplay/\fR or write to <\fIgbsplay-dev@lists.berlios.de\fR>.
 .SH "AUTHOR"
 gbsinfo was written by Tobias Diedrich <\fIranma@gmx.at\fR> (with contributions from others, see README).
 .SH "COPYRIGHT"
