--- a/gbsplay/gbsplay.in.1
+++ b/gbsplay/gbsplay.in.1
@@ -1,4 +1,4 @@
-.\" $Id: gbsplay.in.1,v 1.8 2003/12/28 18:37:45 ranma Exp $
+.\" $Id: gbsplay.in.1,v 1.9 2004/02/16 20:50:04 mitch Exp $
 .\" This manpage 2003 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsplay" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
@@ -95,7 +95,7 @@ User configuration file.
 \fIgbsinfo\fR(1)
 \fIgbsplayrc\fR(5)
 .SH "BUG REPORTS"
-If you encounter bugs, please report them to <\fIranma@gmx.at\fR>.
+If you encounter bugs, please report them via \fIhttp://developer.berlios.de/projects/gbsplay/\fR or write to <\fIgbsplay-dev@lists.berlios.de\fR>.
 .SH "AUTHOR"
 gbsplay was written by Tobias Diedrich <\fIranma@gmx.at\fR> (with contributions from others, see README).
 .SH "COPYRIGHT"
