--- a/gbsplay/gbsinfo.in.1
+++ b/gbsplay/gbsinfo.in.1
@@ -1,14 +1,21 @@
-.\" $Id: gbsinfo.in.1,v 1.2 2004/02/16 20:50:04 mitch Exp $
-.\" This manpage 2003 (C) by Christian Garbs <mitch@cgarbs.de>
+.\" $Id: gbsinfo.in.1,v 1.3 2004/03/12 19:05:40 mitch Exp $
+.\" This manpage 2003-2004 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsinfo" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
 .SH "NAME"
 .LP
 \fBgbsinfo\fR \- display Gameboy sound file information
 .SH "SYNOPSIS"
-\&\fBgbsinfo\fR \fIgbs\-file\fR
+\fBgbsinfo\fR [\fI-h\fR|\fI-V\fR] \fIgbs\-file\fR
 .SH "DESCRIPTION"
 gbsinfo displays information about a Gameboy module dump (.GBS format).
+.SH "OPTIONS"
+.TP
+\fI\-h\fR
+Display short help and exit.
+.TP
+\fI\-V\fR
+Display version number and exit.
 .SH "PARAMETERS"
 .TP
 \fIgbs\-file\fR
