translate refresh_delay option (task #1042)

--- a/gbsplay/po/de.po
+++ b/gbsplay/po/de.po
@@ -1,4 +1,4 @@
-# $Id: de.po,v 1.10 2004/03/12 19:19:18 mitch Exp $
+# $Id: de.po,v 1.11 2004/03/17 14:28:12 mitch Exp $
 # German translations for gbsplay.
 # Copyright (C) 2003-2004 Tobias Diedrich <ranma@gmx.at>
 #                         Christian Garbs <mitch@cgarbs.de>
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.0.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-12 20:15+0100\n"
-"PO-Revision-Date: 2004-03-12 20:17+0100\n"
+"POT-Creation-Date: 2004-03-17 15:19+0100\n"
+"PO-Revision-Date: 2004-03-17 15:26+0100\n"
 "Last-Translator: Christian Garbs <mitch@cgarbs.de>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -21,7 +21,9 @@ msgstr ""
 msgid ""
 "\n"
 "Caught signal %d, exiting...\n"
-msgstr "\nSignal %d abgefangen, beende Ausführung...\n"
+msgstr ""
+"\n"
+"Signal %d abgefangen, beende Ausführung...\n"
 
 msgid ""
 "\n"
@@ -185,6 +187,7 @@ msgid ""
 "  -h  display this help and exit\n"
 "  -q  quiet\n"
 "  -r  set samplerate (%dHz)\n"
+"  -R  set refresh delay (%d milliseconds)\n"
 "  -s  write to stdout\n"
 "  -t  set subsong timeout (%d seconds)\n"
 "  -T  set silence timeout (%d seconds)\n"
@@ -192,7 +195,7 @@ msgid ""
 "  -z  play subsongs in shuffle mode\n"
 "  -Z  play subsongs in random mode (repetitions possible)\n"
 msgstr ""
-"Benutzung: %s [Option(en)] <GBS-Datei> [Starte_bei_Subsong [Stoppe_bei_Subsong] ]\n"
+"Benutzung: %s [Option(en)] <GBS-Datei> [starte_bei_Subsong [stoppe_bei_Subsong] ]\n"
 "\n"
 "Verfügbare Optionen sind:\n"
 "  -E  endian, b == big, l == little, n == native (%s)\n"
@@ -201,6 +204,7 @@ msgstr ""
 "  -h  Diese Hilfe anzeigen und Programm beenden\n"
 "  -q  Ruhig\n"
 "  -r  Abspielrate (%dHz)\n"
+"  -R  Verzögerung (%d Millisekunden)\n"
 "  -s  Auf die Standardausgabe schreiben\n"
 "  -t  Zeitlimit (%d Sekunden)\n"
 "  -T  Zeitlimit für Stille (%d Sekunden)\n"
@@ -259,6 +263,3 @@ msgstr "Kein Zeitlimit"
 
 msgid "untitled"
 msgstr "Unbenannt"
-
-#~ msgid "Usage: %s <gbs-file>\n"
-#~ msgstr "Benutzung: %s <GBS-Datei>\n"
