--- a/gbsplay/po/en.po
+++ b/gbsplay/po/en.po
@@ -1,4 +1,4 @@
-# $Id: en.po,v 1.7 2004/03/12 19:19:18 mitch Exp $
+# $Id: en.po,v 1.8 2004/03/17 14:28:12 mitch Exp $
 # English translations for gbsplay.
 # Copyright (C) 2003 Tobias Diedrich <ranma@gmx.at>
 # This file is distributed under GNU GPL.
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.0.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-12 20:15+0100\n"
-"PO-Revision-Date: 2003-12-28 23:42+0100\n"
+"POT-Creation-Date: 2004-03-17 15:19+0100\n"
+"PO-Revision-Date: 2004-03-17 15:23+0100\n"
 "Last-Translator: Tobias Diedrich <ranma@gmx.at>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -186,6 +186,7 @@ msgid ""
 "  -h  display this help and exit\n"
 "  -q  quiet\n"
 "  -r  set samplerate (%dHz)\n"
+"  -R  set refresh delay (%d milliseconds)\n"
 "  -s  write to stdout\n"
 "  -t  set subsong timeout (%d seconds)\n"
 "  -T  set silence timeout (%d seconds)\n"
@@ -202,6 +203,7 @@ msgstr ""
 "  -h  display this help and exit\n"
 "  -q  quiet\n"
 "  -r  set samplerate (%dHz)\n"
+"  -R  set refresh delay (%d milliseconds)\n"
 "  -s  write to stdout\n"
 "  -t  set subsong timeout (%d seconds)\n"
 "  -T  set silence timeout (%d seconds)\n"
@@ -260,6 +262,3 @@ msgstr "no time limit"
 
 msgid "untitled"
 msgstr "untitled"
-
-#~ msgid "Usage: %s <gbs-file>\n"
-#~ msgstr "Usage: %s <gbs-file>\n"
