--- a/gbsplay/po/de.po
+++ b/gbsplay/po/de.po
@@ -1,4 +1,4 @@
-# $Id: de.po,v 1.11 2004/03/17 14:28:12 mitch Exp $
+# $Id: de.po,v 1.12 2004/03/20 19:25:14 mitch Exp $
 # German translations for gbsplay.
 # Copyright (C) 2003-2004 Tobias Diedrich <ranma@gmx.at>
 #                         Christian Garbs <mitch@cgarbs.de>
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.0.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-17 15:19+0100\n"
-"PO-Revision-Date: 2004-03-17 15:26+0100\n"
+"POT-Creation-Date: 2004-03-20 20:17+0100\n"
+"PO-Revision-Date: 2004-03-20 20:22+0100\n"
 "Last-Translator: Christian Garbs <mitch@cgarbs.de>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -33,6 +33,14 @@ msgstr ""
 "\n"
 "Befehle:  [p] vorheriger Subsong   [n]ächster Subsong   [q] Player beenden\n"
 "          [ ] Pause/Weiterspielen   [1-4] Kanal stumm schalten"
+
+#, c-format
+msgid ""
+"\"%s\" is not a known output plugin.\n"
+"\n"
+msgstr ""
+"\"%s\" is not a known output plugin.\n"
+"\n"
 
 #, c-format
 msgid ""
@@ -131,13 +139,6 @@ msgstr "Länge    "
 msgid "Next"
 msgstr "Nächster"
 
-msgid ""
-"No sound support on this platform.\n"
-"Use 'gbsplay -s' for stdout output."
-msgstr ""
-"Tonausgabe wird auf dieser Plattform nicht unterstützt.\n"
-"Benutze 'gbsplay -s', um die Daten auf die Standardausgabe zu lenken."
-
 #, c-format
 msgid "Not a GBS-File: %s\n"
 msgstr "Keine GBS-Datei: %s\n"
@@ -185,10 +186,11 @@ msgid ""
 "  -f  set fadeout (%d seconds)\n"
 "  -g  set subsong gap (%d seconds)\n"
 "  -h  display this help and exit\n"
+"  -o  select output plugin (%s)\n"
+"      'list' shows available plugins\n"
 "  -q  quiet\n"
 "  -r  set samplerate (%dHz)\n"
 "  -R  set refresh delay (%d milliseconds)\n"
-"  -s  write to stdout\n"
 "  -t  set subsong timeout (%d seconds)\n"
 "  -T  set silence timeout (%d seconds)\n"
 "  -V  print version and exit\n"
@@ -202,6 +204,8 @@ msgstr ""
 "  -f  Ausblendzeit (%d Sekunden)\n"
 "  -g  Lücke (%d Sekunden)\n"
 "  -h  Diese Hilfe anzeigen und Programm beenden\n"
+"  -o  Wahl der Ausgabemethode (%s)\n"
+"      'list' zeigt alle Möglichkeiten\n"
 "  -q  Ruhig\n"
 "  -r  Abspielrate (%dHz)\n"
 "  -R  Verzögerung (%d Millisekunden)\n"
@@ -235,6 +239,10 @@ msgid "Warning: File CRC does not match (0x%08x != 0x%08x).\n"
 msgstr "Warnung: Dateiprüfsumme stimmt nicht überein (0x%08x != 0x%08x).\n"
 
 #, c-format
+msgid "available output plugins:\n"
+msgstr "Verfügbare Ausgabemöglichkeiten:\n"
+
+#, c-format
 msgid "fcntl(F_GETFL) failed: %s\n"
 msgstr "fcntl(F_GETFL) fehlgeschlagen: %s\n"
 
@@ -243,20 +251,20 @@ msgid "fcntl(F_SETFL, flags&~O_NONBLOCK) failed: %s\n"
 msgstr "fcntl(F_SETFL, flags&~O_NONBLOCK) fehlgeschlagen: %s\n"
 
 #, c-format
-msgid "ioctl(dspfd, SNDCTL_DSP_SETFMT, %d) failed: %s\n"
-msgstr "ioctl(dspfd, SNDCTL_DSP_SETFMT, %d) fehlgeschlagen: %s\n"
+msgid "ioctl(fd, SNDCTL_DSP_SETFMT, %d) failed: %s\n"
+msgstr "ioctl(fd, SNDCTL_DSP_SETFMT, %d) fehlgeschlagen: %s\n"
 
 #, c-format
-msgid "ioctl(dspfd, SNDCTL_DSP_SETFRAGMENT, %08x) failed: %s\n"
-msgstr "ioctl(dspfd, SNDCTL_DSP_SETFRAGMENT, %08x) fehlgeschlagen: %s\n"
+msgid "ioctl(fd, SNDCTL_DSP_SETFRAGMENT, %08x) failed: %s\n"
+msgstr "ioctl(fd, SNDCTL_DSP_SETFRAGMENT, %08x) fehlgeschlagen: %s\n"
 
 #, c-format
-msgid "ioctl(dspfd, SNDCTL_DSP_SPEED, %d) failed: %s\n"
-msgstr "ioctl(dspfd, SNDCTL_DSP_SPEED, %d) fehlgeschlagen: %s\n"
+msgid "ioctl(fd, SNDCTL_DSP_SPEED, %d) failed: %s\n"
+msgstr "ioctl(fd, SNDCTL_DSP_SPEED, %d) fehlgeschlagen: %s\n"
 
 #, c-format
-msgid "ioctl(dspfd, SNDCTL_DSP_STEREO, %d) failed: %s\n"
-msgstr "ioctl(dspfd, SNDCTL_DSP_STEREO, %d) fehlgeschlagen: %s\n"
+msgid "ioctl(fd, SNDCTL_DSP_STEREO, %d) failed: %s\n"
+msgstr "ioctl(fd, SNDCTL_DSP_STEREO, %d) fehlgeschlagen: %s\n"
 
 msgid "no time limit"
 msgstr "Kein Zeitlimit"
