--- a/gbsplay/po/de.po
+++ b/gbsplay/po/de.po
@@ -1,4 +1,4 @@
-# $Id: de.po,v 1.12 2004/03/20 19:25:14 mitch Exp $
+# $Id: de.po,v 1.13 2004/03/20 19:57:49 mitch Exp $
 # German translations for gbsplay.
 # Copyright (C) 2003-2004 Tobias Diedrich <ranma@gmx.at>
 #                         Christian Garbs <mitch@cgarbs.de>
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.0.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-20 20:17+0100\n"
-"PO-Revision-Date: 2004-03-20 20:22+0100\n"
+"POT-Creation-Date: 2004-03-20 20:53+0100\n"
+"PO-Revision-Date: 2004-03-20 20:55+0100\n"
 "Last-Translator: Christian Garbs <mitch@cgarbs.de>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -38,9 +38,7 @@ msgstr ""
 msgid ""
 "\"%s\" is not a known output plugin.\n"
 "\n"
-msgstr ""
-"\"%s\" is not a known output plugin.\n"
-"\n"
+msgstr "\"%s\" ist keine bekannte Ausgabemethode.\n\n"
 
 #, c-format
 msgid ""
@@ -138,6 +136,12 @@ msgstr "Länge    "
 
 msgid "Next"
 msgstr "Nächster"
+
+#, c-format
+msgid ""
+"No output plugins available.\n"
+"\n"
+msgstr "Keine Ausgabemethode verfügbar.\n\n"
 
 #, c-format
 msgid "Not a GBS-File: %s\n"
