update homepage URL

--- a/gbsplay/gbsplayrc.in.5
+++ b/gbsplay/gbsplayrc.in.5
@@ -1,4 +1,4 @@
-.\" $Id: gbsplayrc.in.5,v 1.5 2004/03/17 14:18:29 mitch Exp $
+.\" $Id: gbsplayrc.in.5,v 1.6 2004/04/02 09:23:11 mitch Exp $
 .\" This manpage 2003-2004 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsplayrc" "5" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
@@ -45,7 +45,7 @@ User configuration file.
 \fIgbsplay\fR(1)
 \fIgbsinfo\fR(1)
 .SH "BUG REPORTS"
-If you encounter bugs, please report them via \fIhttp://developer.berlios.de/projects/gbsplay/\fR or write to <\fIgbsplay-dev@lists.berlios.de\fR>.
+If you encounter bugs, please report them via \fIhttp://gbsplay.berlios.de/\fR or write to <\fIgbsplay-dev@lists.berlios.de\fR>.
 .SH "AUTHOR"
 gbsplay was written by Tobias Diedrich <\fIranma@gmx.at\fR> (with contributions from others, see README).
 .SH "COPYRIGHT"
