--- a/gbsplay/README
+++ b/gbsplay/README
@@ -1,4 +1,4 @@
-<<$Id: README,v 1.6 2004/02/16 21:32:30 mitch Exp $>>
+<<$Id: README,v 1.7 2004/04/02 09:23:11 mitch Exp $>>
 
 gbsplay - A Gameboy sound player
 
@@ -8,7 +8,7 @@ gbsplay - A Gameboy sound player
 
 Licensed under GNU GPL.
 
-Homepage:        http://developer.berlios.de/projects/gbsplay/
+Homepage:        http://gbsplay.berlios.de/
 Email contact:   <gbsplay-dev@lists.berlios.de>
 Bug reports:     via homepage (preferred) or email
 
