--- a/gbsplay/gbsinfo.in.1
+++ b/gbsplay/gbsinfo.in.1
@@ -1,4 +1,4 @@
-.\" $Id: gbsinfo.in.1,v 1.3 2004/03/12 19:05:40 mitch Exp $
+.\" $Id: gbsinfo.in.1,v 1.4 2004/04/02 09:23:11 mitch Exp $
 .\" This manpage 2003-2004 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsinfo" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
@@ -23,7 +23,7 @@ The sound file to read.  Must be in uncompressed .GBS format.
 .SH "SEE ALSO"
 \fIgbsplay\fR(1)
 .SH "BUG REPORTS"
-If you encounter bugs, please report them via \fIhttp://developer.berlios.de/projects/gbsplay/\fR or write to <\fIgbsplay-dev@lists.berlios.de\fR>.
+If you encounter bugs, please report them via \fIhttp://gbsplay.berlios.de/\fR or write to <\fIgbsplay-dev@lists.berlios.de\fR>.
 .SH "AUTHOR"
 gbsinfo was written by Tobias Diedrich <\fIranma@gmx.at\fR> (with contributions from others, see README).
 .SH "COPYRIGHT"
