--- a/gbsplay/gbsplay.in.1
+++ b/gbsplay/gbsplay.in.1
@@ -1,4 +1,4 @@
-.\" $Id: gbsplay.in.1,v 1.11 2004/03/20 19:25:14 mitch Exp $
+.\" $Id: gbsplay.in.1,v 1.12 2004/04/02 09:23:11 mitch Exp $
 .\" This manpage 2003-2004 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsplay" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
@@ -98,7 +98,7 @@ User configuration file.
 \fIgbsinfo\fR(1)
 \fIgbsplayrc\fR(5)
 .SH "BUG REPORTS"
-If you encounter bugs, please report them via \fIhttp://developer.berlios.de/projects/gbsplay/\fR or write to <\fIgbsplay-dev@lists.berlios.de\fR>.
+If you encounter bugs, please report them via \fIhttp://gbsplay.berlios.de/\fR or write to <\fIgbsplay-dev@lists.berlios.de\fR>.
 .SH "AUTHOR"
 gbsplay was written by Tobias Diedrich <\fIranma@gmx.at\fR> (with contributions from others, see README).
 .SH "COPYRIGHT"
