--- a/gbsplay/po/de.po
+++ b/gbsplay/po/de.po
@@ -1,4 +1,4 @@
-# $Id: de.po,v 1.14 2004/04/05 10:28:06 mitch Exp $
+# $Id: de.po,v 1.15 2004/04/05 12:14:08 mitch Exp $
 # German translations for gbsplay.
 # Copyright (C) 2003-2004 Tobias Diedrich <ranma@gmx.at>
 #                         Christian Garbs <mitch@cgarbs.de>
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.0.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-04-05 12:25+0200\n"
-"PO-Revision-Date: 2004-04-05 12:29+0200\n"
+"POT-Creation-Date: 2004-04-05 14:13+0200\n"
+"PO-Revision-Date: 2004-04-05 14:15+0200\n"
 "Last-Translator: Christian Garbs <mitch@cgarbs.de>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -85,7 +85,9 @@ msgstr "Künstler:"
 msgid ""
 "Available output plugins:\n"
 "\n"
-msgstr "Verfügbare Ausgabemöglichkeiten:\n\n"
+msgstr ""
+"Verfügbare Ausgabemöglichkeiten:\n"
+"\n"
 
 #, c-format
 msgid "CRC32:\t\t0x%08x/0x%08x (%s)\n"
@@ -224,6 +226,7 @@ msgid ""
 "  -f  set fadeout (%d seconds)\n"
 "  -g  set subsong gap (%d seconds)\n"
 "  -h  display this help and exit\n"
+"  -l  loop mode\n"
 "  -o  select output plugin (%s)\n"
 "      'list' shows available plugins\n"
 "  -q  quiet\n"
@@ -242,6 +245,7 @@ msgstr ""
 "  -f  Ausblendzeit (%d Sekunden)\n"
 "  -g  Lücke (%d Sekunden)\n"
 "  -h  Diese Hilfe anzeigen und Programm beenden\n"
+"  -l  Endloswiedergabe\n"
 "  -o  Wahl der Ausgabemethode (%s)\n"
 "      'list' zeigt alle Möglichkeiten\n"
 "  -q  Ruhig\n"
