--- a/gbsplay/INSTALL
+++ b/gbsplay/INSTALL
@@ -1,4 +1,4 @@
-<<$Id: INSTALL,v 1.3 2004/01/11 20:27:05 mitch Exp $>>
+<<$Id: INSTALL,v 1.4 2004/04/14 18:47:38 ranmachan Exp $>>
 
 
 gbsplay INSTALL instructions
@@ -16,6 +16,10 @@ Run "make uninstall" (as root) to remove it afterwards.
 Be aware that you need a GNU make!
 So on FreeBSD, you need to run "gmake" instead of "make".
 
+Note to Solaris users:
+Solaris /bin/sh is not POSIX compatible (${foo#bar} and ${foo%bar} are
+not supported), please change the first line of configure to from /bin/sh
+to /usr/bin/ksh.
 
 
 ### CUSTOMIZING THE INSTALLATION TARGET
